--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sumologic",
   "version": "1.0.0",
   "description": "Send logs to SumoLogic HTTP Endpoint",
-  "main": "main.js",
+  "main": "build/sumologic.js",
   "scripts": {
     "watch": "webpack -d --watch",
-    "test": "jasmine --stop-on-failure=true"
+    "test": "karma start karma.conf.js"
   },
   "author": "Imad Mouaddine",
   "license": "ISC",
@@ -13,12 +13,22 @@
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "babel-runtime": "^6.6.1",
     "jasmine": "^2.4.1",
+    "jasmine-ajax": "^3.2.0",
+    "jasmine-core": "^2.4.1",
     "jasmine-es6": "^0.1.8",
+    "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "karma-jasmine-ajax": "^0.1.13",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "webpack": "^1.13.0"
   },
   "dependencies": {
