--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sumologic",
   "version": "1.0.0",
   "description": "Send logs to SumoLogic HTTP Endpoint",
-  "main": "build/sumologic.js",
+  "main": "build/sumo_logic.js",
   "scripts": {
-    "watch": "webpack -d --watch",
-    "build": "webpack -p",
+    "watch": "node_modules/.bin/babel src/sumo_logic.js --watch --out-file src/sumo_logic.js",
+    "build": "node_modules/.bin/babel src --out-dir build/",
     "test": "karma start karma.conf.js"
   },
   "author": "Imad Mouaddine",
