--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.1.4",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -25,12 +24,11 @@
     "jasmine-core": "^2.4.1",
     "jasmine-es6": "^0.1.8",
     "karma": "^0.13.22",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
     "karma-jasmine-ajax": "^0.1.13",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "webpack": "^1.13.0"
   },
   "dependencies": {
