--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sumologic.js",
   "version": "1.0.4.1",
   "description": "Send logs to SumoLogic HTTP Endpoint",
+  "keywords": ["SumoLogic", "Logging", "logs"],
   "main": "build/sumo_logic.js",
   "scripts": {
     "watch": "node_modules/.bin/babel src/sumo_logic.js --watch --out-file src/sumo_logic.js",
