Remove build folder from Git

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.5",
   "description": "Send logs to SumoLogic HTTP Endpoint",
   "keywords": ["SumoLogic", "Logging", "logs"],
-  "main": "build/sumo_logic.js",
+  "main": "./dist/sumo_logic.js",
   "scripts": {
     "watch": "node_modules/.bin/babel src/sumo_logic.js --watch --out-file src/sumo_logic.js",
-    "build": "node_modules/.bin/babel src --out-dir build/",
-    "test": "karma start karma.conf.js"
+    "build": "node_modules/.bin/babel src --out-dir dist/",
+    "test": "karma start karma.conf.js",
+    "prepublish": "yarn run build"
   },
   "author": "Imad Mouaddine",
   "license": "MIT",
